Moved credentials into passwd.crypt
Change-Id: Ic731eb4e76fed4a2903ee47ed6b97f75eb73f867