@@ -8,12 +8,29 @@
 package org.ccopy;
 
 import java.io.File;
+import java.io.IOException;
+import java.net.Authenticator;
+import java.net.InetSocketAddress;
+import java.net.Proxy.Type;
+import java.net.SocketAddress;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Date;
+import java.util.logging.ConsoleHandler;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import java.net.Proxy;
 
 import javax.sound.midi.SysexMessage;
 
+import org.ccopy.operation.CopyDirectory;
 import org.ccopy.resource.Resource;
+import org.ccopy.resource.ResourceAuthenticator;
+import org.ccopy.resource.file.FileResource;
+import org.ccopy.resource.s3.S3Resource;
+import org.ccopy.resource.util.LoggingDateFormatter;
+import org.ccopy.util.HttpMethod;
 
 /**
  * This is the main programm for cloudcopy
@@ -29,10 +46,37 @@ import org.ccopy.resource.Resource;
 public class CCopy {
 	/**
 	 * @param args
+	 * @throws URISyntaxException 
 	 */
-	public static void main(String[] args) {
+	public static void main(String[] args) throws URISyntaxException {
 		long startTime = System.currentTimeMillis();
 		System.out.println("Starting cloudcopy...");
+		/**
+		 * Setup the default Authenticator for http requests
+		 */
+		URL main = CCopy.class.getResource("pwd.crypt");
+		try {
+			Authenticator.setDefault(new ResourceAuthenticator(new File(main.toURI())));
+		} catch (IOException e1) {
+			// TODO Auto-generated catch block
+			e1.printStackTrace();
+		}
+		/**
+		 * Setup the proxy if needed
+		 */
+		SocketAddress addr = new InetSocketAddress("proxy.sozvers.at", 8080);
+		HttpMethod.proxy = new Proxy(Type.HTTP, addr);
+		/**
+		 * Enable Logging
+		 */
+//		// set the Log Format and Level
+//		Logger logger = Logger.getLogger("org.ccopy");
+//		ConsoleHandler ch = new ConsoleHandler();
+//		ch.setLevel(Level.FINEST);
+//		ch.setFormatter(new LoggingDateFormatter());
+//		// add to logger
+//		logger.addHandler(ch);
+//		logger.setLevel(Level.FINEST);
 		/**
 		 * Local Variables
 		 */
@@ -56,11 +100,12 @@ public class CCopy {
 					argsPosition++;
 					break;
 				case 1: // source URL
-					sourceUrl = new FileResource(new URL(s));
+					sourceUrl = new FileResource(new URI(s));
 					argsPosition++;
 					break;
 				case 2: // target URL
-					targetUrl = new File(s);
+//					targetUrl = new FileResource(new URI(s));
+					targetUrl = new S3Resource(new URI(s));
 					argsPosition++;
 					break;
 				default:
